Resolve issues apontadas pelo Sonar