@@ -1,14 +1,5 @@
 package com.pointtils.pointtils.src.application.services;
 
-import java.math.BigDecimal;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.pointtils.pointtils.src.application.dto.requests.InterpreterRequestDTO;
 import com.pointtils.pointtils.src.application.dto.responses.InterpreterResponseDTO;
 import com.pointtils.pointtils.src.application.mapper.InterpreterMapper;
@@ -19,9 +10,15 @@ import com.pointtils.pointtils.src.core.domain.entities.enums.Gender;
 import com.pointtils.pointtils.src.core.domain.entities.enums.UserStatus;
 import com.pointtils.pointtils.src.core.domain.entities.enums.UserTypeE;
 import com.pointtils.pointtils.src.infrastructure.repositories.InterpreterRepository;
-
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.math.BigDecimal;
+import java.util.List;
+import java.util.UUID;
 
 @Service
 @Transactional
@@ -31,49 +28,47 @@ public class InterpreterRegisterService {
     private final InterpreterRepository repository;
     private final PasswordEncoder passwordEncoder;
     private final InterpreterResponseMapper responseMapper;
-    
-    public InterpreterResponseDTO register(InterpreterRequestDTO request){
+
+    public InterpreterResponseDTO register(InterpreterRequestDTO request) {
         Interpreter interpreter = Interpreter.builder()
-            .email(request.getPersonalData().getEmail())
-            .password(passwordEncoder.encode(request.getPersonalData().getPassword()))
-            .phone(request.getPersonalData().getPhone())
-            .picture(request.getPersonalData().getPicture())
-            .status(UserStatus.PENDING)
-            .type(UserTypeE.INTERPRETER)
-            .name(request.getPersonalData().getName())
-            .gender(Gender.fromString(request.getPersonalData().getGender()))
-            .birthday(request.getPersonalData().getBirthday())
-            .cpf(request.getPersonalData().getCpf())
-            .cnpj(request.getProfessionalData().getCnpj())
-            .rating(BigDecimal.ZERO)
-            .minValue(request.getProfessionalData().getMinValue())
-            .maxValue(request.getProfessionalData().getMaxValue())
-            .imageRights(request.getProfessionalData().getImageRights())
-            .modality(InterpreterMapper.toInterpreterModality(request.getProfessionalData().getModality()))
-            .description(request.getProfessionalData().getDescription())
-            .build();
-        
+                .email(request.getPersonalData().getEmail())
+                .password(passwordEncoder.encode(request.getPersonalData().getPassword()))
+                .phone(request.getPersonalData().getPhone())
+                .picture(request.getPersonalData().getPicture())
+                .status(UserStatus.PENDING)
+                .type(UserTypeE.INTERPRETER)
+                .name(request.getPersonalData().getName())
+                .gender(Gender.fromString(request.getPersonalData().getGender()))
+                .birthday(request.getPersonalData().getBirthday())
+                .cpf(request.getPersonalData().getCpf())
+                .cnpj(request.getProfessionalData().getCnpj())
+                .rating(BigDecimal.ZERO)
+                .minValue(request.getProfessionalData().getMinValue())
+                .maxValue(request.getProfessionalData().getMaxValue())
+                .imageRights(request.getProfessionalData().getImageRights())
+                .modality(InterpreterMapper.toInterpreterModality(request.getProfessionalData().getModality()))
+                .description(request.getProfessionalData().getDescription())
+                .build();
+
         if (request.getLocation() != null) {
             Location location = Location.builder()
-            .uf(request.getLocation().getUf())
-            .city(request.getLocation().getCity())
-            .user(interpreter)
-            .build();
-        
+                    .uf(request.getLocation().getUf())
+                    .city(request.getLocation().getCity())
+                    .user(interpreter)
+                    .build();
+
             interpreter.setLocation(location);
         }
 
         Interpreter savedInterpreter = repository.save(interpreter);
-        
-        InterpreterResponseDTO response = responseMapper.toResponseDTO(savedInterpreter);
-        return response;
+
+        return responseMapper.toResponseDTO(savedInterpreter);
     }
 
     public InterpreterResponseDTO findById(UUID id) {
         Interpreter interpreter = repository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Usuário não encontrado"));
-        InterpreterResponseDTO response = responseMapper.toResponseDTO(interpreter);
-        return response;
+        return responseMapper.toResponseDTO(interpreter);
     }
 
 
@@ -88,12 +83,12 @@ public class InterpreterRegisterService {
         List<Interpreter> interpreters = repository.findAll();
         return interpreters.stream()
                 .map(responseMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public InterpreterResponseDTO updateComplete(UUID id, InterpreterRequestDTO dto) {
         Interpreter interpreter = repository.findById(id)
-            .orElseThrow(() -> new EntityNotFoundException("Intérprete não encontrado"));
+                .orElseThrow(() -> new EntityNotFoundException("Intérprete não encontrado"));
 
         // Atualizar todos os campos obrigatórios
         if (dto.getPersonalData() != null) {
@@ -105,7 +100,7 @@ public class InterpreterRegisterService {
             interpreter.setBirthday(p.getBirthday());
             interpreter.setCpf(p.getCpf());
             interpreter.setGender(Gender.fromString(p.getGender()));
-            
+
             if (p.getPassword() != null) {
                 interpreter.setPassword(passwordEncoder.encode(p.getPassword()));
             }
@@ -138,7 +133,7 @@ public class InterpreterRegisterService {
 
     public InterpreterResponseDTO updatePartial(UUID id, InterpreterRequestDTO dto) {
         Interpreter interpreter = repository.findById(id)
-            .orElseThrow(() -> new EntityNotFoundException("Intérprete não encontrado"));
+                .orElseThrow(() -> new EntityNotFoundException("Intérprete não encontrado"));
         // (personalData)
         if (dto.getPersonalData() != null) {
             var p = dto.getPersonalData();
